--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body{
     @apply outline-none text-[0.9rem] text-slate-800  placeholder:text-slate-800
 }
 .search-button{
-    @apply text-white bg-orange-400 p-2 rounded-tl-[12px] cursor-pointer hover:bg-slate-800 transition-all duration-300 rounded-br-[12px] rounded font-bold mr-3
+    @apply text-white bg-orange-400 md:w-9 w-full m-auto p-2 rounded-tl-[12px] cursor-pointer hover:bg-slate-800 transition-all duration-300 rounded-br-[12px] rounded font-bold mr-3
 }
 .tour_img{
     @apply relative
